--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <!-- Quote -->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote">Hello, this is your quote</span>
+        <span id="quote"></span>
       </div>
       <!-- Author -->
       <div class="quote-author">
-        <span id="author">Buddha</span>
+        <span id="author"></span>
       </div>
       <!-- Buttons -->
       <div class="button-container">
